--- a/app/globals.css
+++ b/app/globals.css
@@ -21,11 +21,12 @@ body {
 
 @layer components {
   .button {
-    @apply px-5 py-2 rounded-md outline-none bg-foreground text-secondary font-[500] cursor-pointer;
+    @apply px-5 py-2 rounded-md outline-none bg-foreground text-secondary font-[500] cursor-pointer hover:scale-110 transition-all ease-in-out duration-200;
   }
 
   .practice-container {
-    @apply flex flex-col items-center justify-center gap-20 max-w-screen-md w-full py-10 border border-foreground rounded-lg overflow-hidden;
+    @apply flex flex-col items-center justify-center gap-20 max-w-screen-md w-full py-10 border border-foreground rounded-lg overflow-hidden
+    min-h-[62vh];
   }
 
   .disabled-button {
